aside side div ready

--- a/style.scss
+++ b/style.scss
@@ -135,3 +135,7 @@ main {
   box-shadow: -4px -4px 24px rgba(247, 247, 2, 0.2),
     4px 4px 24px rgba(255, 167, 4, 0.5);
 }
+
+#asideDescription{
+  text-align: justify;
+}
