--- a/style.css
+++ b/style.css
@@ -163,4 +163,8 @@ main .productAndDescription aside button + p {
   -webkit-box-shadow: -4px -4px 24px rgba(247, 247, 2, 0.2), 4px 4px 24px rgba(255, 167, 4, 0.5);
           box-shadow: -4px -4px 24px rgba(247, 247, 2, 0.2), 4px 4px 24px rgba(255, 167, 4, 0.5);
 }
+
+#asideDescription {
+  text-align: justify;
+}
 /*# sourceMappingURL=style.css.map */
