ready except sales

--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ main .productAndDescription aside {
   border-radius: 20px;
   -webkit-box-shadow: -8px -8px 12px #ebe6e6, 8px 8px 12px #a3b1c6;
           box-shadow: -8px -8px 12px #ebe6e6, 8px 8px 12px #a3b1c6;
+  display: none;
   padding: 20px;
 }
 
@@ -167,5 +168,24 @@ main .productAndDescription aside button + p {
 
 #asideDescription {
   text-align: justify;
+}
+
+#closer {
+  background-color: black;
+  color: white;
+  font-size: 25px;
+  padding: 5px 15px;
+  margin-bottom: 10px;
+  float: right;
+}
+
+#closer:hover {
+  background-color: #4d4d4d;
+  cursor: pointer;
+}
+
+#addToCart:hover {
+  background-color: #d24e00;
+  cursor: pointer;
 }
 /*# sourceMappingURL=style.css.map */
