changed some cart list parts

--- a/style.scss
+++ b/style.scss
@@ -121,14 +121,18 @@ main {
           // font-size: 30px ;
         }
       }
-      button {
+      #addToCart {
         border: none;
         padding: 10px 5px;
         background-color: #eb5800;
+        text-decoration: none;
         color: white;
         font-weight: bold;
         border-radius: 10px;
         box-shadow: -8px -8px 12px #ebe6e6, 4px 4px 6px #a3b1c6;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         & + p {
           margin-top: 20px;
         }
@@ -148,6 +152,8 @@ main {
 #closer{
   background-color: black;
   color: white;
+  border: none;
+  border-radius: 10px;
   font-size: 25px;
   padding: 5px 15px;
   margin-bottom: 10px;
@@ -194,4 +200,21 @@ main {
       justify-content: left
     }
   }
+}
+
+.remove{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 10px;
+  background-color: white;
+  color: red;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.remove:hover{
+  background-color: rgba(211, 211, 211, 0.37);
 }
