--- a/style.css
+++ b/style.css
@@ -43,19 +43,31 @@ header ul li {
 }
 
 header ul a {
+  padding: 10px;
+  border-radius: 10px;
   text-decoration: none;
   color: black;
+  -webkit-transition: 300ms;
+  transition: 300ms;
+}
+
+header ul a:hover {
+  color: white;
+  background-color: black;
+  -webkit-transition: 300ms;
+  transition: 300ms;
 }
 
 main .productAndDescription {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 100%;
   padding: 10px;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 main .productAndDescription section {
@@ -70,7 +82,6 @@ main .productAndDescription section {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-right: 20px;
   -webkit-box-shadow: -8px -8px 12px #ebe6e6, 8px 8px 12px #a3b1c6;
           box-shadow: -8px -8px 12px #ebe6e6, 8px 8px 12px #a3b1c6;
   padding-top: 40px;
@@ -112,6 +123,7 @@ main .productAndDescription aside {
           box-shadow: -8px -8px 12px #ebe6e6, 8px 8px 12px #a3b1c6;
   display: none;
   padding: 20px;
+  margin-left: 20px;
 }
 
 main .productAndDescription aside img {
@@ -176,6 +188,10 @@ main .productAndDescription aside #addToCart + p {
 }
 
 .products:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
   cursor: pointer;
   -webkit-box-shadow: -4px -4px 24px rgba(247, 247, 2, 0.2), 4px 4px 24px rgba(255, 167, 4, 0.5);
           box-shadow: -4px -4px 24px rgba(247, 247, 2, 0.2), 4px 4px 24px rgba(255, 167, 4, 0.5);
@@ -194,10 +210,15 @@ main .productAndDescription aside #addToCart + p {
   padding: 5px 15px;
   margin-bottom: 10px;
   float: right;
+  -webkit-transition: 300ms;
+  transition: 300ms;
 }
 
 #closer:hover {
-  background-color: #4d4d4d;
+  background-color: white;
+  color: black;
+  -webkit-transition: 300ms;
+  transition: 300ms;
   cursor: pointer;
 }
 
@@ -207,11 +228,13 @@ main .productAndDescription aside #addToCart + p {
 }
 
 .cart {
+  display: none;
   -webkit-box-shadow: -8px -8px 12px #ebe6e6, 8px 8px 12px #a3b1c6;
           box-shadow: -8px -8px 12px #ebe6e6, 8px 8px 12px #a3b1c6;
   border-radius: 20px;
-  margin: 10px 30px 0 10px;
+  margin: 10px 10px 0 10px;
   padding: 20px 0;
+  overflow: auto;
 }
 
 .cart p {
@@ -220,14 +243,53 @@ main .productAndDescription aside #addToCart + p {
 
 .cart p #yourCart {
   font-size: 40px;
-  font-family: 'Pacifico', cursive;
+  font-family: "Pacifico", cursive;
 }
 
 .cart p #isEmpty {
-  font-family: 'Pacifico', cursive;
+  font-family: "Pacifico", cursive;
   font-size: 20px;
   margin-left: 10px;
   color: gray;
+}
+
+.cart #cartInfo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.cart #cartInfo #closeCart {
+  margin-right: 20px;
+  height: 30px;
+  padding: 20px 10px;
+  font-size: 25px;
+  border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+  background-color: black;
+  border-radius: 10px;
+  cursor: pointer;
+  -webkit-transition: 300ms;
+  transition: 300ms;
+}
+
+.cart #cartInfo #closeCart:hover {
+  background-color: white;
+  color: black;
+  -webkit-transition: 300ms;
+  transition: 300ms;
 }
 
 .cart ul {
@@ -285,5 +347,33 @@ main .productAndDescription aside #addToCart + p {
 
 .remove:hover {
   background-color: rgba(211, 211, 211, 0.37);
+}
+
+#cartList {
+  display: none;
+}
+
+#cartIconQuantity {
+  color: red;
+  font-weight: bold;
+}
+
+.products {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+h3 {
+  text-align: right;
+  margin: 50px;
+  font-family: "Pacifico", cursive;
+  font-weight: lighter;
+  font-style: italic;
+  color: #e3d8ec;
+}
+
+h3 span {
+  font-size: 10px;
+  font-family: "Pacifico", cursive;
 }
 /*# sourceMappingURL=style.css.map */
