--- a/style.scss
+++ b/style.scss
@@ -44,10 +44,10 @@ header {
 main {
   .productAndDescription {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 100%;
     padding: 10px;
-    margin-top: 20px;
+    margin-top: 10px;
     section {
       display: flex;
       flex-wrap: wrap;
@@ -56,7 +56,7 @@ main {
       // border: 1px solid lightgray;
       border-radius: 20px;
       justify-content: center;
-      margin-right: 20px;
+      // margin-right: 10px;
       box-shadow: -8px -8px 12px #ebe6e6, 8px 8px 12px #a3b1c6;
       padding-top: 40px;
       div {
@@ -96,6 +96,7 @@ main {
       box-shadow: -8px -8px 12px #ebe6e6, 8px 8px 12px #a3b1c6;
       display: none;
       padding: 20px;
+      margin-left: 20px;
       img {
         width: 100%;
         border-radius: 20px;
@@ -149,6 +150,8 @@ main {
   }
 }
 .products:hover {
+  transform: scale(1.05);
+  transition: 0.3s;
   cursor: pointer;
   box-shadow: -4px -4px 24px rgba(247, 247, 2, 0.2),
     4px 4px 24px rgba(255, 167, 4, 0.5);
@@ -185,8 +188,9 @@ main {
   display: none;
   box-shadow: -8px -8px 12px #ebe6e6, 8px 8px 12px #a3b1c6;
   border-radius: 20px;
-  margin: 10px 30px 0 10px;
+  margin: 10px 10px 0 10px;
   padding: 20px 0;
+  overflow: auto;
   p {
     margin-left: 120px;
     #yourCart {
@@ -267,4 +271,26 @@ main {
 }
 #cartList{
   display: none;
+}
+
+#cartIconQuantity{
+  color: red;
+  font-weight: bold;
+}
+
+.products{
+  transition: 0.3s;
+}
+
+h3{
+  text-align: right;
+  margin:50px;
+  font-family: "Pacifico", cursive;
+  font-weight: lighter;
+  font-style: italic;
+  color: rgb(227, 216, 236);
+  span{
+    font-size: 10px;
+    font-family: "Pacifico", cursive;
+  }
 }
